# saao-pypackage-cookiecutter

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.package_name}}/: .gitignore  LICENSE  README.md  check.sh  lint.sh  pyproject.toml  requirements-dev.txt  setup.cfg
{{cookiecutter.package_name}}/.github/workflows/: publish-documentation.yaml  run-tests.yaml
{{cookiecutter.package_name}}/docs/: conf.py  development.md  index.md
{{cookiecutter.package_name}}/src/{{cookiecutter.package_slug}}/: py.typed
