[metadata]
name = {{ cookiecutter.package_name }}
version = {{ cookiecutter.version }}
description = {{ cookiecutter.short_description }}
long_description = file: README.md
long_description_content_type: text/markdown
url = {{ cookiecutter.url }}
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
# install_requires =
#    some_package>=1.2.3,<2
#    some_other_package>=9

[options.packages.find]
where = src
exclude =
    test*

# [options.entry_points]
# console_scripts
#     mycommand = {{ cookiecutter.package_slug }}.module_name:function_name

# ----
# mypy
# ----

[mypy]
strict = True
python_version = 3.7
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True

# ------
# flake8
# ------

[flake8]
max-line-length = 88
extend-ignore = E203

# ------
# pytest
# ------

[tool:pytest]
testpaths = tests
addopts = --cov --strict-markers
xfail_strict = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/{{ cookiecutter.package_slug }}

# ---
# tox
# ---

[tox:tox]
envlist = ["3.7", "3.8", "3.9", "3.10"]
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy
commands =
    mypy {posargs:src}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src tests}

[testenv:imports]
skip_install = True
deps =
    isort
commands =
    isort {posargs:--check --diff src tests}

[testenv:lint]
skip_install = True
deps =
    flake8
commands =
    flake8 {posargs:src tests}

[testenv:docs]
skip_install = True
deps =
    sphinx
    sphinx-autodoc-typehints
    sphinx-book-theme
    myst-parser
commands =
    sphinx-build -W -b html -d {envtmpdir}/doctrees docs {envtmpdir}/html

